# XiboPi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  XiboPi.kdev4  main.cpp
doc/: XiboPi.xmi
src/: CMakeLists.txt  Event.cpp  Event.h  XiboClient.cpp  XiboClient.h  XiboConfig.cpp  XiboConfig.h  XiboDisplay.cpp  XiboDisplay.h  XiboRegion.cpp  XiboRegion.h  config.h  main.cpp
src/api/: CMakeLists.txt  soapC.cpp  soapH.h  soapStub.h  soapxmdsBindingProxy.cpp  soapxmdsBindingProxy.h  stdsoap2.cpp  xmdsBinding.nsmap
src/api/generate/: build.sh  xibo.h  xmdsBinding.BlackList.req.xml  xmdsBinding.BlackList.res.xml  xmdsBinding.GetFile.req.xml  xmdsBinding.GetFile.res.xml  xmdsBinding.GetResource.req.xml  xmdsBinding.GetResource.res.xml  xmdsBinding.MediaInventory.req.xml  xmdsBinding.MediaInventory.res.xml  xmdsBinding.NotifyStatus.req.xml  xmdsBinding.NotifyStatus.res.xml  xmdsBinding.RegisterDisplay.req.xml  xmdsBinding.RegisterDisplay.res.xml  xmdsBinding.RequiredFiles.req.xml  xmdsBinding.RequiredFiles.res.xml  xmdsBinding.Schedule.req.xml  xmdsBinding.Schedule.res.xml  xmdsBinding.SubmitLog.req.xml  xmdsBinding.SubmitLog.res.xml  xmdsBinding.SubmitScreenShot.req.xml  xmdsBinding.SubmitScreenShot.res.xml  xmdsBinding.SubmitStats.req.xml  xmdsBinding.SubmitStats.res.xml
src/xml/: XmlDisplay.cpp  XmlDisplay.h  XmlFiles.cpp  XmlFiles.h  XmlLayout.cpp  XmlLayout.h  XmlSchedule.cpp  XmlSchedule.h
src/zmq/: CMakeLists.txt  XiboZMQ.cpp  XiboZMQ.h
test/: AllTests.cpp  CMakeLists.txt
test/xml/: XmlDisplayTest.cpp
